<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:textAppearance="@android:style/TextAppearance.Medium"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:paddingBottom="10dp"
	        android:text="@string/login_required" />
	    
	    <EditText 
	        android:hint="@string/email"
	        android:layout_width="match_parent"
	        android:singleLine="true"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"
	        android:id="@+id/email" />
	    
	    <EditText
	        android:id="@+id/password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/password"
	        android:inputType="textPassword"
	        android:singleLine="true" />
	    
	    <Button
	        android:id="@+id/login"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	        android:text="@string/login_to_trakt" />
	    
	</LinearLayout>
</ScrollView>